--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.17.1",
+    "@vanilla-extract/dynamic": "^2.1.2",
     "@vanilla-extract/vite-plugin": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
