--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "rollup": "^4.9.0"
+  },
+  "overrides": {
+    "rollup": "^4.9.0"
   }
 }
+
